# 21-data-science-projects

./: .gitignore  README.md  pyproject.toml
1. Retail Price Optimization - Regression/: Retail Price Optimization.ipynb  app.py
1. Retail Price Optimization - Regression/model/: encoder.pkl  retail_price_model.pkl  scaler.pkl
10. MNIST Digits Classification - Computer Vision/: MNIST Digits Classification.ipynb  app.py
11. Fashion Recommendation System - Computer Vision/: Fashion Recommendation System.ipynb  app.py
12. Real-time OCR - Computer Vision/: Optical Character Recognition.ipynb  app.py
2. Car Price Prediction - Regression/: Car Price Prediction.ipynb  app.py  car_price_prediction_pipeline.pkl
3. Food Delivery Time Prediction - Regression/: app.py  food_delivery_time_prediction_model.pkl
4. Iris Flower - Classification/: Iris Flower Classification.ipynb  app.py  iris_flower_classification.pkl
5. Text Emotions - Classification/: Text Emotions Classification.ipynb  app.py
5. Text Emotions - Classification/model/: encoder.pkl  metadata.json  tokenizer.pkl
6. Mobile Price - Classification/: Mobile Price Classification.ipynb  app.py  mobile_price_classification.pkl
7. Music Genres - Clustering/: app.py  cluster_df.csv  music_genres_pipeline.pkl
8. Credit Card - Clustering/: Credit Card Clustering.ipynb  app.py  credit_card_clustering_pipeline.pkl
9. Customer RFM Analysis - Clustering/: Customer RFM Analysis.ipynb  app.py
