[project]
name = "21-data-science-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "Emre Tuncer",email = "emretuncer.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tensorflow[and-cuda] (>=2.20.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
